COVID data convertion

--- a/Dataset/image_resize&convert_to_pix.ipynb
+++ b/Dataset/image_resize&convert_to_pix.ipynb
@@ -49,6 +49,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1NonCOVID 데이터 변환"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1716,13 +1723,30 @@
     "        print(count)\n",
     "        img_resize=image.resize((224, 224))\n",
     "        pix=np.array(img_resize)\n",
+    "        pix=np.array([pix])\n",
     "        y_data=np.append(y_data,1)\n",
     "        if count==0:\n",
     "            x_data=pix\n",
     "        else:\n",
     "            x_data = np.concatenate((x_data, pix), axis=0)\n",
     "        count++\n",
-    "        \n",
+    "\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2COVID 변환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# covid 환자인 경우\n",
     "targetdir = r\"COVID_dataset/curated_data/curated_data/2COVID\" #해당 폴더 설정 \n",
     "\n",
@@ -1730,15 +1754,38 @@
     "\n",
     "format = [\".png\"] #지원하는 파일 형태의 확장자들\n",
     "\n",
+    "y_data=np.array([])\n",
+    "\n",
+    "count=0\n",
+    "\n",
     "for (path,dirs,files) in os.walk(targetdir):\n",
     "    for file in files:\n",
     "        image = Image.open(path+\"\\\\\"+file)\n",
     "        print(count)\n",
     "        img_resize=image.resize((224, 224))\n",
     "        pix=np.array(img_resize)\n",
+    "        pix=np.array([pix])\n",
     "        y_data=np.append(y_data,2)\n",
-    "        x_data = np.concatenate((x_data, pix), axis=0)   \n",
-    "        \n",
+    "        if count==0:\n",
+    "            x_data=pix\n",
+    "        else:\n",
+    "            x_data = np.concatenate((x_data, pix), axis=0)\n",
+    "        count++"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3CAP 변환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 폐렴환자인 경우\n",
     "targetdir=r\"COVID_dataset/curated_data/curated_data/3CAP\"\n",
     "\n",
@@ -1746,14 +1793,23 @@
     "\n",
     "format = [\".png\"] #지원하는 파일 형태의 확장자들\n",
     "\n",
+    "\n",
+    "y_data=np.array([])\n",
+    "\n",
+    "count=0\n",
     "for (path,dirs,files) in os.walk(targetdir):\n",
     "    for file in files:\n",
     "        image = Image.open(path+\"\\\\\"+file)\n",
     "        print(count)\n",
     "        img_resize=image.resize((224, 224))\n",
     "        pix=np.array(img_resize)\n",
+    "        pix=np.array([pix])\n",
     "        y_data=np.append(y_data,3)\n",
-    "        x_data = np.concatenate((x_data, pix), axis=0)   \n"
+    "        if count==0:\n",
+    "            x_data=pix\n",
+    "        else:\n",
+    "            x_data = np.concatenate((x_data, pix), axis=0)\n",
+    "        count++"
    ]
   }
  ],
